--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -21,6 +21,7 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "json-server": "^0.15.1",
     "path": "^0.12.7",
     "react": "^16.12.0",
