--- a/challenge_2/package.json
+++ b/challenge_2/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "chart.js": "^2.9.3",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.0",
     "path": "^0.12.7",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
